--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ body {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    padding: 0 15px;
 }
 
 nav ul {
@@ -44,6 +45,7 @@ nav a {
     display: block;
     padding: 56px 23px;
     font-size: 18px;
+    font-weight: 900;
 }
 
 nav a:hover {
@@ -54,4 +56,32 @@ nav a:hover {
 
 header .contanier {
     align-items: center;
+}
+
+.logo {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--green);
+    font-weight: bold;
+    font-size: 28px;
+    display: block;
+    padding: 12px 21px;
+    border: 2px solid #b7b7b7;
+    position: relative;
+}
+
+.logo::after {
+    content: 'travel';
+    text-transform: uppercase;
+    font-size: 18px;
+    color: var(--green);
+    font-weight: normal;
+    padding: 0 15px;
+    background-color: var(--white);
+    position: absolute;
+    top: 45px;
+    left: 40px;
+}
+.mini-menu {
+    display: none;
 }
