new block home, adaptive block home

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,3 +85,40 @@ header .contanier {
 .mini-menu {
     display: none;
 }
+
+.home {
+    min-height: 915px;
+    background: url('../img/bg.jpg') center/cover fixed;
+}
+.home-contanier {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: inherit;
+    text-align: center;
+}
+
+.home-title {
+    margin: 0;
+    color: var(--white);
+    text-transform: uppercase;
+    font-size: 68px;
+}
+
+.home-text {
+    color: var(--white);
+    max-width: 1000px;
+    margin: 50px auto 90px;
+    font-size: 22px;
+    line-height: 38px;
+}
+
+.home-link {
+    text-decoration: none;
+    text-transform: uppercase;
+    background-color: var(--green);
+    color: var(--white);
+    font-weight: 26px;
+    padding: 25px 40px;
+    border-radius: 4px;
+}
