--- a/css/media.css
+++ b/css/media.css
@@ -18,6 +18,18 @@
         min-height: auto;
         padding: 40px 0;
     }
+    .fav-contanier {
+        flex-direction: column;
+    }
+    .fav-item {
+        width: 100%;
+    }
+    .fav-text {
+        width: 100%;
+    }
+    .fav-image {
+        width: 30%;
+    }
 }
 
 @media(max-width: 800px) {
@@ -56,5 +68,17 @@
     header .contanier {
         padding-left: 0;
         padding-right: 0;
+    }
+}
+
+@media(max-width: 600px) {
+    .fav-item {
+        flex-direction: column;
+        align-items: center;
+    }
+    .fav-img {
+        width: 70%;
+        margin: 0 auto;
+        border: 2px solid var(--green);
     }
 }
