add new section service plus slider slick plus adaptive

--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,21 @@
+
+@media(max-width: 1200px) {
+    .service {
+        flex-direction: column;
+    }
+    .service-slider, .service-block {
+        width: 100%;
+    }
+    .service-slider {
+        height: 280px;
+    }
+
+    .slide img {
+        width: 100%;
+        object-fit: cover;
+        object-position: bottom;
+    }
+}
 @media(max-width: 1000px) {
     header .contanier {
         flex-direction: column;
@@ -69,6 +87,9 @@
         padding-left: 0;
         padding-right: 0;
     }
+    .service-item {
+        width: 100%;
+    }
 }
 
 @media(max-width: 600px) {
@@ -81,4 +102,12 @@
         margin: 0 auto;
         border: 2px solid var(--green);
     }
+
+    .slide img {
+        filter: blur(5px)
+    }
+    .slick-center img{
+        filter: none;
+    }
 }
+
