--- a/css/styles.css
+++ b/css/styles.css
@@ -269,3 +269,43 @@ header .contanier {
     height: 100%;
 }
 
+.tours {
+    padding: 100px 0;
+    text-align: center;
+}
+
+.tours-contanier {
+    flex-wrap: wrap;
+    margin: 75px auto;
+}
+
+.tours-contanier a {
+    background-color: red;
+    flex: 0 24%;
+
+}
+
+.tours-contanier a img{
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
+}
+
+.more {
+    cursor: pointer;
+    border: none;
+    text-transform: uppercase;
+    color: var(--white);
+    background: var(--green);
+    font-size: 26px;
+    padding: 25px 50px;
+    border-radius: 5px;
+    box-shadow: 0 0 35px rgba(89, 196, 90, 0.65);
+    transition: .3s;
+}
+
+.more:hover {
+    box-shadow: none;
+}
+
