--- a/css/media.css
+++ b/css/media.css
@@ -96,7 +96,7 @@
     .tours-contanier a {
         flex: 0 49%;
     }
-    .contacts-contanier {
+    .contanier-contacts {
         flex-direction: column;
     }
     .contact-info, .contact-form {
